fixed jumping around of language switcher when opening drop down menu

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3842,6 +3842,7 @@ input, select, textarea {
 #language-switcher ul {
 	display: flex;
 	flex-direction: column;
+	width: 9em;
 }
 
 #language-switcher ul li a {
